syntax = "proto3";

package java.net;

// IDs: 110 - 119

/**
 * @TypeId(110)
 */
message InetAddress {
	string	host	= 1;
	bytes	address	= 2;
}

/**
 * @TypeId(111)
 */
message InetSocketAddress {
	string	resolvedHost	= 1;
	bytes	address	= 2;
	string	unresolvedHost	= 3;
	uint32	port	= 4;
}

/**
 * @TypeId(112)
 */
message URI {
	string	uri	= 1;
}

/**
 * @TypeId(113)
 */
message URL {
	string	url	= 1;
}
