syntax = "proto3";

package org.jgroups.stack;

// IDs: 137 - 139

/**
 * @TypeId(137)
 */
message IpAddress {
	bytes	address	= 1;
	uint32	port	= 2;
}
